--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
     "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
-    "next": "^14.2.5",
+    "next": "14.2.5",
     "next-themes": "^0.4.6",
     "openai": "^4.72.1",
-    "react": "19.1.0",
+    "react": "18.2.0",
     "react-day-picker": "^9.8.1",
-    "react-dom": "19.1.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
@@ -78,8 +78,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
